<resources>
    <string name="app_name">Motoboy Assistente</string>
    <string name="txtIfood">Ligações do iFood</string>
    <string name="txtInsert">Insira o numero de telefone da comanda do Ifood</string>
    <string name="edt_Ifood_ID">ID exemplo 123456778</string>
    <string name="btnLigar">Ligar</string>
    <string name="btnMensagem">Mensagem</string>
    <string name="txtWhatsapp">WhatsApp sem Contato</string>
    <string name="txtWhatsapp_tutorial">Insira o numero de telefone para enviar mensagem sem adicionar o contato</string>
    <string name="txtAtencao">ATENÇÃO: Não escreva o 0800 (ele é adicionado automaticamente)</string>
</resources>