<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/vwPrincipal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvwIfood"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:foregroundGravity="center"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/vwPrincipal"
        app:layout_constraintEnd_toEndOf="@+id/vwPrincipal"
        app:layout_constraintStart_toStartOf="@+id/vwPrincipal"
        app:layout_constraintTop_toBottomOf="@+id/vwPrincipal">

        <TextView
            android:id="@+id/txtIfood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/txtIfood"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/cvwIfood" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtInvisible1"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@+id/vwPrincipal"
        android:text="@string/txtIfood"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtInsira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtInvisible1"
        app:layout_constraintStart_toStartOf="@+id/txtInvisible1"
        android:text="@string/txtInsert" />
    <TextView
        android:id="@+id/txtAtencao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAtencao"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="@+id/txtInsira"
        app:layout_constraintTop_toBottomOf="@+id/txtInsira"
        android:textColor="@color/red"
        />

    <EditText
        android:id="@+id/edtIfood_telefone"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAtencao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="007 0110"
        android:maxLength="7"
        android:inputType="number" />

    <EditText
        android:id="@+id/edtIfood_ID"
        android:layout_width="240dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/edtIfood_telefone"
        app:layout_constraintStart_toStartOf="@+id/edtIfood_telefone"
        android:layout_marginTop="10dp"
        android:hint="@string/edt_Ifood_ID"
        android:inputType="number"
        android:maxLength="8" />
    <TextView
        android:id="@+id/txtIfoodTelefoneCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtIfood_ID"
        app:layout_constraintStart_toStartOf="@+id/edtIfood_ID"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/btnIfoodLigar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtIfoodTelefoneCompleto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btnLigar"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/red"
        />

    <View
        android:id="@+id/vwWhatsapp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/green"
        app:layout_constraintTop_toTopOf="@+id/btnIfoodLigar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvwWhatsapp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:background="@color/white"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/vwWhatsapp"
        app:layout_constraintEnd_toEndOf="@+id/vwWhatsapp"
        app:layout_constraintStart_toStartOf="@id/vwPrincipal"
        app:layout_constraintTop_toBottomOf="@id/vwWhatsapp">

        <TextView
            android:id="@+id/txtWhatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/txtWhatsapp"
            android:textSize="30sp"
            android:textColor="@color/green" />




    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txtInvisible2"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@+id/vwWhatsapp"
        android:text="@string/txtWhatsapp"
        app:layout_constraintStart_toStartOf="@+id/txtAtencao"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/txtWhatsapp_tutorial"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtWhatsapp_tutorial"
        app:layout_constraintTop_toBottomOf="@+id/txtInvisible2"
        app:layout_constraintStart_toStartOf="@+id/txtInvisible2"
        android:layout_marginEnd="16dp"
        />

    <EditText
        android:id="@+id/edtTelefone_DDI"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:hint="DDI ex: 55"
        android:maxLength="2"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/txtWhatsapp_tutorial"
        app:layout_constraintStart_toStartOf="@+id/txtInvisible2"
        />

    <EditText
        android:id="@+id/edtTelefone_numero"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint=" (67)91234-5678"
        android:maxLength="11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtTelefone_DDI"
        app:layout_constraintTop_toTopOf="@+id/edtTelefone_DDI"
        android:inputType="number" />
    <TextView
        android:id="@+id/txtWhatsappCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/edtTelefone_DDI"
        app:layout_constraintTop_toBottomOf="@id/edtTelefone_DDI"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/btnMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtWhatsappCompleto"
        android:text="@string/btnMensagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/green"
        />


</androidx.constraintlayout.widget.ConstraintLayout>